Fix input alignment without helper text

--- a/packages/core/src/form-field/FormField.css
+++ b/packages/core/src/form-field/FormField.css
@@ -13,6 +13,7 @@
 
 .saltFormField-labelTop {
   gap: var(--salt-spacing-75);
+  grid-auto-rows: min-content;
   grid-template-areas:
     "label"
     "controls";
